--- a/org.argeo.suite.tracker/build.properties
+++ b/org.argeo.suite.tracker/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                e4xmi/,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 source.. = src/
