--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -11,10 +11,10 @@ argeo.osgi.start.3.node=\
 org.argeo.cms
 
 argeo.osgi.start.5.suite=\
-org.argeo.suite.cms
-
-argeo.osgi.start.5.suite=\
-org.argeo.suite.e4.rap
+org.argeo.suite.cms,\
+org.argeo.suite.e4.rap,\
+org.argeo.suite.standard,\
+org.argeo.suite.tracker
 
 # Local
 argeo.node.repo.type=h2
