Clarify Eclipse 4 deployment.

--- a/org.argeo.suite.e4.rap/build.properties
+++ b/org.argeo.suite.e4.rap/build.properties
@@ -2,6 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               e4xmi/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               e4xmi/
 source.. = src/
