--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -2,9 +2,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               e4xmi/,\
-               plugin.xml,\
-               e4xmi/argeo-suite-toolbars.e4xmi,\
-               OSGI-INF/resourcesE4Service.xml,\
-               e4xmi/argeo-settings.e4xmi
+               e4xmi/
 source.. = src/
