Improve Argeo Suite theming.

--- a/org.argeo.suite.ui/build.properties
+++ b/org.argeo.suite.ui/build.properties
@@ -1,7 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/argeoSuiteApp.xml,\
-               OSGI-INF/workHeader.xml,\
-               OSGI-INF/leadPane.xml
+               OSGI-INF/
 source.. = src/
