--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -13,6 +13,7 @@ org.argeo.cms
 argeo.osgi.start.5.suite=\
 org.argeo.suite.cms,\
 org.argeo.suite.ui,\
+org.argeo.suite.theme.default,\
 org.argeo.suite.ui.rap
 
 # Local
