Login/logout working in new Argeo Suite.

--- a/org.argeo.suite.ui/build.properties
+++ b/org.argeo.suite.ui/build.properties
@@ -1,5 +1,9 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               config/,\
+               OSGI-INF/loginScreen.xml,\
+               OSGI-INF/dashboard.xml,\
+               OSGI-INF/recentItems.xml
 source.. = src/
