Improve the new Argeo Suite shell.

--- a/org.argeo.suite.ui/config/header.properties
+++ b/org.argeo.suite.ui/config/header.properties
@@ -1,4 +1,4 @@
 service.pid=argeo.suite.ui.header
 argeo.suite.ui=true
 
-argeo.suite.ui.header.title=%defaultWorkAppTitle
+argeo.suite.ui.header.title=%appTitle
