--- a/org.argeo.entity.ui/pom.xml
+++ b/org.argeo.entity.ui/pom.xml
@@ -9,19 +9,21 @@
 		<version>2.1.16-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>org.argeo.suite.ui</artifactId>
-	<name>Suite UI</name>
+	<artifactId>org.argeo.entity.ui</artifactId>
+	<name>Entity UI</name>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.entity.ui</artifactId>
+			<artifactId>org.argeo.entity.core</artifactId>
 			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
+
+		<!-- Argeo Commons -->
 		<dependency>
-			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.connect.ui</artifactId>
-			<version>${version.argeo-connect}</version>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.cms.ui</artifactId>
+			<version>${version.argeo-commons}</version>
 		</dependency>
 
 		<!-- Eclipse E4 -->
