--- a/org.argeo.suite.core/pom.xml
+++ b/org.argeo.suite.core/pom.xml
@@ -9,28 +9,21 @@
 		<version>2.1.16-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>org.argeo.suite.ui</artifactId>
-	<name>Suite UI</name>
+	<artifactId>org.argeo.suite.core</artifactId>
+	<name>Suite Core</name>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.entity.ui</artifactId>
+			<artifactId>org.argeo.entity.core</artifactId>
 			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.argeo.connect</groupId>
-			<artifactId>org.argeo.connect.ui</artifactId>
-			<version>${version.argeo-connect}</version>
-		</dependency>
 
-		<!-- Eclipse E4 -->
+		<!-- Argeo Commons -->
 		<dependency>
-			<groupId>org.argeo.tp</groupId>
-			<artifactId>argeo-tp-rap-e4</artifactId>
-			<version>${version.argeo-tp}</version>
-			<type>pom</type>
-			<scope>provided</scope>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.cms</artifactId>
+			<version>${version.argeo-commons}</version>
 		</dependency>
 	</dependencies>
 </project>
