--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -18,7 +18,7 @@
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
 		<version.argeo-commons>2.1.89-SNAPSHOT</version.argeo-commons>
-		<version.argeo-connect>2.1.82-SNAPSHOT</version.argeo-connect>
+<!-- 		<version.argeo-connect>2.1.82-SNAPSHOT</version.argeo-connect> -->
 		<version.argeo-slc>2.1.17-SNAPSHOT</version.argeo-slc>
 
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
@@ -50,6 +50,18 @@
 					<artifactId>slf4j.osgi</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<!-- SDK -->
+		<dependency>
+			<groupId>org.argeo.tp.sdk</groupId>
+			<artifactId>org.junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.argeo.tp.sdk</groupId>
+			<artifactId>org.hamcrest</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
