--- a/dep/org.argeo.suite.dep.e4.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.e4.rap/pom.xml
@@ -10,42 +10,17 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.dep.e4.rap</artifactId>
-	<name>Suite E4 Platform RAP</name>
+	<name>Suite Platform E4 RAP</name>
 	<packaging>jar</packaging>
 	<dependencies>
-		<!-- Entity Framework -->
+		<!-- Argeo Suite UI -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.entity.api</artifactId>
+			<artifactId>org.argeo.suite.dep.ui.rap</artifactId>
 			<version>2.1.16-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.entity.core</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.entity.ui</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<type>pom</type>
 		</dependency>
 
-		<!-- Argeo Suite -->
-		<dependency>
-			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.suite.core</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.suite.ui</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.suite</groupId>
-			<artifactId>org.argeo.suite.ui.rap</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
-		</dependency>
 
 		<!-- Base CMS distribution -->
 		<dependency>
@@ -56,72 +31,10 @@
 		</dependency>
 
 		<!-- Argeo TP Extras -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.argeo.tp.payment</groupId> -->
-<!-- 			<artifactId>com.stripe</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.argeo.tp.payment</groupId> -->
+		<!-- <artifactId>com.stripe</artifactId> -->
+		<!-- </dependency> -->
 
 	</dependencies>
-	<profiles>
-		<profile>
-			<id>rpmbuild</id>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>prepare-source</id>
-								<phase>package</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<descriptorRefs>
-										<descriptorRef>a2-source</descriptorRef>
-									</descriptorRefs>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>rpm-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>rpm-argeo</id>
-								<phase>package</phase>
-								<goals>
-									<goal>rpm</goal>
-								</goals>
-								<configuration>
-									<name>argeo-suite-e4-rap</name>
-									<mappings>
-										<mapping>
-											<directory>/usr/share/osgi</directory>
-											<username>root</username>
-											<groupname>root</groupname>
-											<filemode>644</filemode>
-											<directoryIncluded>true</directoryIncluded>
-											<sources>
-												<source>
-													<location>${project.build.directory}/${project.artifactId}-${project.version}-a2-source</location>
-													<includes>
-														<include>**/*.jar</include>
-													</includes>
-												</source>
-											</sources>
-										</mapping>
-									</mappings>
-									<requires>
-										<require>argeo-connect-e4-rap</require>
-									</requires>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
