--- a/dep/pom.xml
+++ b/dep/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.suite</groupId>
@@ -11,8 +13,9 @@
 	<name>Argeo Suite Dependencies</name>
 	<packaging>pom</packaging>
 	<modules>
+		<module>org.argeo.suite.dep.ui.rap</module>
 		<module>org.argeo.suite.dep.e4.rap</module>
-		<module>org.argeo.suite.dep.e4.rcp</module>
+		<!-- <module>org.argeo.suite.dep.e4.rcp</module> -->
 	</modules>
 	<build>
 		<plugins>
@@ -48,6 +51,11 @@
 	</build>
 	<dependencies>
 		<!-- SDK -->
+		<dependency>
+			<groupId>org.argeo.tp.equinox</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.argeo.tp.sdk</groupId>
 			<artifactId>org.junit</artifactId>
