Work on RCP styling.

--- a/sdk/argeo-suite-rcp.properties
+++ b/sdk/argeo-suite-rcp.properties
@@ -13,7 +13,7 @@ org.argeo.cms
 argeo.osgi.start.5.suite=\
 org.argeo.suite.ui,\
 org.argeo.suite.theme.default,\
-org.argeo.suite.ui.rap
+org.argeo.cms.ui.rcp
 
 # Local
 argeo.node.repo.type=h2
