--- a/knowledge/org.argeo.support.odk/build.properties
+++ b/knowledge/org.argeo.support.odk/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/odkServletContext.xml
 source.. = src/
