--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -52,6 +52,13 @@
 			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
 		
+		<!-- Argeo Library -->
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.documents.ui</artifactId>
+			<version>2.1.16-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Argeo Knowledge -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
