Improve multi-layers and introduce documents layer.

--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -15,6 +15,9 @@ org.argeo.suite.ui,\
 org.argeo.suite.theme.default,\
 org.argeo.suite.ui.rap
 
+argeo.osgi.start.6.suite=\
+org.argeo.documents.ui
+
 # Local
 argeo.node.repo.type=h2
 org.osgi.service.http.port=7070
