--- a/org.argeo.suite.ui/build.properties
+++ b/org.argeo.suite.ui/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                config/,\
                OSGI-INF/loginScreen.xml,\
                OSGI-INF/dashboard.xml,\
-               OSGI-INF/recentItems.xml
+               OSGI-INF/recentItems.xml,\
+               OSGI-INF/dashboardLayer.xml
 source.. = src/
