--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -27,7 +27,7 @@ org.osgi.service.http.port=7070
 
 argeo.node.init=../../init
 
-argeo.i18n.locales=en,fr,de,ar
+argeo.i18n.locales=en,fr
 argeo.i18n.defaultLocale=en
 
 #tika.config=/home/mbaudier/dev/git/gpl/argeo-suite/sdk/exec/argeo-office-e4-rap/data/indexes/node/tika-config.xml
