Introduce XForms support.

--- a/knowledge/pom.xml
+++ b/knowledge/pom.xml
@@ -11,6 +11,7 @@
 	<name>Argeo Knowledge Components</name>
 	<packaging>pom</packaging>
 	<modules>
+		<module>org.argeo.support.xforms</module>
 		<module>org.argeo.support.odk</module>
 		<module>org.argeo.support.geonames</module>
 	</modules>
