--- a/org.argeo.suite.core/pom.xml
+++ b/org.argeo.suite.core/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>org.argeo.cms</artifactId>
 			<version>${version.argeo-commons}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.maintenance</artifactId>
+			<version>${version.argeo-commons}</version>
+		</dependency>
 	</dependencies>
 </project>
