--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -62,6 +62,11 @@
 		<!-- Argeo Knowledge -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.support.xforms</artifactId>
+			<version>2.1.16-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.odk</artifactId>
 			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
