--- a/knowledge/org.argeo.support.xforms/pom.xml
+++ b/knowledge/org.argeo.support.xforms/pom.xml
@@ -9,8 +9,8 @@
 		<version>2.1.16-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>org.argeo.support.odk</artifactId>
-	<name>ODK support</name>
+	<artifactId>org.argeo.support.xforms</artifactId>
+	<name>XForms support</name>
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
