--- a/knowledge/org.argeo.support.odk/pom.xml
+++ b/knowledge/org.argeo.support.odk/pom.xml
@@ -18,5 +18,10 @@
 			<artifactId>org.argeo.suite.core</artifactId>
 			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.support.xforms</artifactId>
+			<version>2.1.16-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
