--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>dep</artifactId>
-		<version>2.1.16-SNAPSHOT</version>
+		<version>2.1.16</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.dep.ui.rap</artifactId>
@@ -17,63 +15,63 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.api</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.core</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.ui</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 
 		<!-- Argeo Suite -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.core</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.theme.default</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui.rap</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		
 		<!-- Argeo Library -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.documents.ui</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 
 		<!-- Argeo Knowledge -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.xforms</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.odk</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.geonames</artifactId>
-			<version>2.1.16-SNAPSHOT</version>
+			<version>2.1.16</version>
 		</dependency>
 
 		<!-- Base CMS distribution -->
