--- a/org.argeo.suite.ui.rap/pom.xml
+++ b/org.argeo.suite.ui.rap/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>2.1.16</version>
+		<version>2.1.17-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.ui.rap</artifactId>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui</artifactId>
-			<version>2.1.16</version>
+			<version>2.1.17-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Eclipse E4 -->
