--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Argeo Suite</name>
 	<description />
-	<version>2.1.16</version>
+	<version>2.1.17-SNAPSHOT</version>
 	<properties>
 		<version.argeo-suite>2.1.16-SNAPSHOT</version.argeo-suite>
 		<!-- Dependencies -->
@@ -48,7 +48,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>argeo-suite-2.1.16</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<organization>
 		<name>Argeo GmbH</name>
