--- a/org.argeo.suite.ui/pom.xml
+++ b/org.argeo.suite.ui/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>org.argeo.eclipse.ui</artifactId>
 			<version>${version.argeo-commons}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.eclipse.ui.rap</artifactId>
+			<version>${version.argeo-commons}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Eclipse E4 -->
 		<dependency>
