--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.maven</groupId>
@@ -12,12 +14,12 @@
 	<description />
 	<version>2.1.17-SNAPSHOT</version>
 	<properties>
-		<version.argeo-suite>2.1.16-SNAPSHOT</version.argeo-suite>
+		<!-- <version.argeo-suite>2.1.17-SNAPSHOT</version.argeo-suite> -->
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
-		<version.argeo-commons>2.1.90-SNAPSHOT</version.argeo-commons>
-<!-- 		<version.argeo-slc>2.1.17-SNAPSHOT</version.argeo-slc> -->
+		<version.argeo-commons>2.1.90</version.argeo-commons>
+		<!-- <version.argeo-slc>2.1.17-SNAPSHOT</version.argeo-slc> -->
 
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2/argeo</argeo.rpm.stagingRepository>
 		<git.rw />
