--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>dep</artifactId>
-		<version>2.1.17</version>
+		<version>2.1.18-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.dep.ui.rap</artifactId>
@@ -15,63 +15,63 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.api</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.core</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.ui</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Argeo Suite -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.core</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.theme.default</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui.rap</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- Argeo Library -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.documents.ui</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Argeo Knowledge -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.xforms</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.odk</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.support.geonames</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Additional Third Parties -->
