--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Parent POM for Argeo Suite Extensions</name>
 	<description />
-	<version>2.1.17</version>
+	<version>2.1.18-SNAPSHOT</version>
 	<properties>
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.dep.e4.rap</artifactId>
-			<version>2.1.17</version>
+			<version>2.1.18-SNAPSHOT</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -174,8 +174,4 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
-  <scm>
-    <tag>argeo-suite-2.1.17</tag>
-  </scm>
 </project>
