--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
-		<version.argeo-commons>2.1.90</version.argeo-commons>
+		<version.argeo-commons>2.1.91-SNAPSHOT</version.argeo-commons>
 		<!-- <version.argeo-slc>2.1.17-SNAPSHOT</version.argeo-slc> -->
 
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2/argeo</argeo.rpm.stagingRepository>
