Fix plain Argeo Suite.

--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -11,6 +11,7 @@ argeo.osgi.start.3.node=\
 org.argeo.cms
 
 argeo.osgi.start.5.suite=\
+org.argeo.suite.core,\
 org.argeo.suite.ui,\
 org.argeo.suite.theme.default,\
 org.argeo.suite.ui.rap
