--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -57,6 +57,13 @@
 			<version>2.1.18-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Argeo Publishing -->
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.publishing.ui</artifactId>
+			<version>2.1.18-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Argeo Knowledge -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
