--- a/org.argeo.entity.ui/pom.xml
+++ b/org.argeo.entity.ui/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.suite</groupId>
@@ -22,6 +24,14 @@
 			<groupId>org.argeo.commons</groupId>
 			<artifactId>org.argeo.cms.ui</artifactId>
 			<version>${version.argeo-commons}</version>
+		</dependency>
+
+		<!-- Specific -->
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.eclipse.ui.rap</artifactId>
+			<version>2.1.91-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Eclipse E4 -->
