--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -15,9 +15,7 @@
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
-		<version.argeo-commons>2.1.89</version.argeo-commons>
-		<!-- <version.argeo-connect>2.1.82-SNAPSHOT</version.argeo-connect> -->
-		<!-- <version.argeo-slc>2.1.17-SNAPSHOT</version.argeo-slc> -->
+		<version.argeo-commons>2.1.91-SNAPSHOT</version.argeo-commons>
 
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
 		<git.rw />
