--- a/core/org.argeo.entity.ui/pom.xml
+++ b/core/org.argeo.entity.ui/pom.xml
@@ -30,8 +30,7 @@
 		<dependency>
 			<groupId>org.argeo.commons</groupId>
 			<artifactId>org.argeo.eclipse.ui.rap</artifactId>
-			<version>2.1.91-SNAPSHOT</version>
-			<scope>provided</scope>
+			<version>${version.argeo-commons}</version>
 		</dependency>
 
 		<!-- Eclipse E4 -->
