--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argeo.maven</groupId>
 		<artifactId>argeo-osgi-parent</artifactId>
-		<version>2.1.2</version>
+		<version>2.1.3</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite-lib</artifactId>
@@ -17,7 +17,7 @@
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
 		<version.argeo-commons>2.1.92-SNAPSHOT</version.argeo-commons>
 
-		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
+		<argeo.rpm.stagingRepository>/srv/rpmfactory/testing/argeo</argeo.rpm.stagingRepository>
 		<git.rw />
 	</properties>
 	<dependencies>
@@ -76,33 +76,20 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.argeo.tp.extras</groupId>
-				<artifactId>argeo-tp-extras</artifactId>
-				<version>${version.argeo-tp-extras}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
 		<repository>
 			<id>argeo</id>
-			<url>http://repo.argeo.org/data/java/argeo-2.1</url>
+			<url>http://forge.argeo.org/data/java/argeo-2.1</url>
 			<releases>
 				<enabled>true</enabled>
 				<updatePolicy>daily</updatePolicy>
 				<checksumPolicy>warn</checksumPolicy>
 			</releases>
-		</repository>
-		<repository>
-			<id>argeo-extras</id>
-			<url>http://repo.argeo.org/data/java/argeo-extras-2.1</url>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 	<reporting>
