--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Parent POM for Argeo Suite Extensions</name>
 	<description />
-	<version>2.1.18-SNAPSHOT</version>
+	<version>2.1.18</version>
 	<properties>
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.dep.ui.rap</artifactId>
-			<version>2.1.18-SNAPSHOT</version>
+			<version>2.1.18</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -159,4 +159,8 @@
 			</plugin>
 		</plugins>
 	</reporting>
+
+  <scm>
+    <tag>argeo-suite-2.1.18</tag>
+  </scm>
 </project>
