--- a/people/org.argeo.people.ui/pom.xml
+++ b/people/org.argeo.people.ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>people</artifactId>
-		<version>2.1.18-SNAPSHOT</version>
+		<version>2.1.18</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.people.ui</artifactId>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.ui</artifactId>
-			<version>2.1.18-SNAPSHOT</version>
+			<version>2.1.18</version>
 		</dependency>
 
 		<!-- Eclipse E4 -->
