--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Argeo Suite</name>
 	<description />
-	<version>2.1.18</version>
+	<version>2.1.19-SNAPSHOT</version>
 	<properties>
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
@@ -38,7 +38,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>argeo-suite-2.1.18</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<organization>
 		<name>Argeo GmbH</name>
