--- a/knowledge/org.argeo.support.geonames/pom.xml
+++ b/knowledge/org.argeo.support.geonames/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>knowledge</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.support.geonames</artifactId>
