--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -15,7 +15,7 @@
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
-		<version.argeo-commons>2.3.0</version.argeo-commons>
+		<version.argeo-commons>2.3.1-SNAPSHOT</version.argeo-commons>
 
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/unstable/argeo</argeo.rpm.stagingRepository>
 		<git.rw />
