Move icons to a separate directory.

--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -28,6 +28,13 @@
 			<version>2.3.1-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Argeo Suite Icons -->
+		<dependency>
+			<groupId>org.argeo.suite.icons</groupId>
+			<artifactId>org.argeo.suite.icons.default</artifactId>
+			<version>${version.argeo-suite-icons}</version>
+		</dependency>
+
 		<!-- Argeo Suite -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
