--- a/core/org.argeo.entity.core/pom.xml
+++ b/core/org.argeo.entity.core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>core</artifactId>
-		<version>2.1.22-SNAPSHOT</version>
+		<version>2.1.22</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.entity.core</artifactId>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.entity.api</artifactId>
-			<version>2.1.22-SNAPSHOT</version>
+			<version>2.1.22</version>
 		</dependency>
 
 		<!-- Argeo Commons -->
