--- a/core/org.argeo.suite.theme.default/pom.xml
+++ b/core/org.argeo.suite.theme.default/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>core</artifactId>
-		<version>2.1.22-SNAPSHOT</version>
+		<version>2.1.22</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.theme.default</artifactId>
