--- a/dep/pom.xml
+++ b/dep/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>2.1.22</version>
+		<version>2.1.23-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dep</artifactId>
