Add People and Map to the default layers.

--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -17,7 +17,10 @@ org.argeo.suite.theme.default,\
 org.argeo.suite.ui.rap
 
 argeo.osgi.start.6.suite=\
-org.argeo.documents.ui
+org.argeo.documents.ui,\
+org.argeo.people.ui,\
+org.argeo.geo.ui
+
 
 # Local
 argeo.node.repo.type=h2
