Introduce DocBook 4 converter.

--- a/publishing/org.argeo.publishing.ui/build.properties
+++ b/publishing/org.argeo.publishing.ui/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               OSGI-INF/documentUiProvider.xml
+               OSGI-INF/documentUiProvider.xml,\
+               OSGI-INF/dbk4Converter.xml
 source.. = src/
