Improve RPM build.

--- a/dep/org.argeo.suite.dep.ui.rap/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rap/pom.xml
@@ -11,6 +11,20 @@
 	<name>Suite Platform UI RAP</name>
 	<packaging>jar</packaging>
 	<dependencies>
+		<!-- Base CMS distribution -->
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.dep.cms.ui.rap</artifactId>
+			<version>${version.argeo-commons}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.dep.cms.ext</artifactId>
+			<version>${version.argeo-commons}</version>
+			<type>pom</type>
+		</dependency>
+
 		<!-- Entity Framework -->
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
@@ -102,26 +116,6 @@
 			<version>2.3-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Additional Third Parties -->
-		<dependency>
-			<groupId>org.argeo.tp.javax</groupId>
-			<artifactId>javax.xml.bind</artifactId>
-		</dependency>
-
-		<!-- Jackson JSON processor -->
-		<dependency>
-			<groupId>org.argeo.tp.jackson</groupId>
-			<artifactId>com.fasterxml.jackson.core.jackson-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.jackson</groupId>
-			<artifactId>com.fasterxml.jackson.core.jackson-databind</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.jackson</groupId>
-			<artifactId>com.fasterxml.jackson.core.jackson-annotations</artifactId>
-		</dependency>
-
 		<!-- PDFBox -->
 		<dependency>
 			<groupId>org.argeo.tp.apache</groupId>
@@ -134,40 +128,6 @@
 		<dependency>
 			<groupId>org.argeo.tp.apache</groupId>
 			<artifactId>org.apache.pdfbox.jempbox</artifactId>
-		</dependency>
-
-		<!-- POI requirements -->
-		<dependency>
-			<groupId>org.argeo.tp.apache.commons</groupId>
-			<artifactId>org.apache.commons.math3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache.commons</groupId>
-			<artifactId>org.apache.commons.collections4</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xml.security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xmlbeans</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xalan</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xalan.serializer</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xml.resolver</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.apache</groupId>
-			<artifactId>org.apache.xerces</artifactId>
 		</dependency>
 
 		<!-- POI (MS office documents) -->
@@ -187,31 +147,6 @@
 			<groupId>org.argeo.tp.apache</groupId>
 			<artifactId>org.apache.poi.scratchpad</artifactId>
 		</dependency>
-
-		<!-- Mail -->
-		<dependency>
-			<groupId>org.argeo.tp.javax</groupId>
-			<artifactId>javax.activation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.argeo.tp.javax</groupId>
-			<artifactId>javax.mail</artifactId>
-		</dependency>
-
-		<!-- Base CMS distribution -->
-		<dependency>
-			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.dep.cms.ui.rap</artifactId>
-			<version>${version.argeo-commons}</version>
-			<type>pom</type>
-		</dependency>
-
-		<!-- Argeo TP Extras -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.argeo.tp.payment</groupId> -->
-		<!-- <artifactId>com.stripe</artifactId> -->
-		<!-- </dependency> -->
-
 	</dependencies>
 	<profiles>
 		<profile>
@@ -246,7 +181,7 @@
 									<goal>rpm</goal>
 								</goals>
 								<configuration>
-									<name>argeo-suite-ui-rap-unstable</name>
+									<name>argeo-suite-ui-rap${argeo.rpm.suffix}</name>
 									<mappings>
 										<mapping>
 											<directory>/usr/share/osgi</directory>
@@ -307,9 +242,9 @@
 									<goal>rpm</goal>
 								</goals>
 								<configuration>
-									<name>argeo-suite-ui-rap-tp-unstable</name>
+									<name>argeo-suite-ui-rap-tp${argeo.rpm.suffix}</name>
 									<version>${version.argeo-tp}</version>
-									<release>${maven.build.timestamp}</release>
+									<release>${argeo.rpm.release.tp}</release>
 									<mappings>
 										<mapping>
 											<directory>/usr/share/osgi</directory>
