--- a/dep/pom.xml
+++ b/dep/pom.xml
@@ -20,6 +20,16 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<configuration>
+					<quiet>true</quiet>
+					<files>
+						<file>../../cnf/${version.context}.bnd</file>
+					</files>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<configuration>
