--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.argeo.maven</groupId>
 		<artifactId>argeo-osgi-parent</artifactId>
-		<version>2.1.4</version>
+		<version>2.1.5-SNAPSHOT</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -14,9 +14,9 @@
 	<packaging>pom</packaging>
 	<url>http://www.argeo.org/</url>
 	<properties>
+		<version.context>unstable</version.context>
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
-		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
 		<version.argeo-commons>2.3-SNAPSHOT</version.argeo-commons>
 		<!-- <version.argeo-rcp>2.1.104-SNAPSHOT</version.argeo-rcp> -->
 		<version.argeo-suite-icons>2.1.1</version.argeo-suite-icons>
